# stronghold

./: Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/services/: message.rs  mod.rs  room.rs  space.rs
crates/entity/: Cargo.toml  build.rs
crates/entity/protos/: federation.proto  room.proto
crates/entity/src/: config.rs  helpers.rs  lib.rs  loader.rs  proto.rs
crates/federation/: Cargo.toml  Dockerfile
crates/federation/src/: main.rs
