[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/entity",
    "crates/api",
    "crates/federation",
]

[workspace.dependencies]
tonic-reflection = "0.9.1"
tonic = "0.9.1"
prost = "0.11.8"
prost-types = "0.11"

mongodb = "2.4.0"
futures = "0.3"

serde = { version = "1.0.159", features = ["derive"] }

eyre = "0.6.8"

tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }

config = { version = "0.13.1", features = ["toml"] }
 
[dependencies]
