[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = []
federation = []
server = ["federation", "mongodb", "tonic-reflection", "config", "lazy_static"]
default = ["client", "server"]

[dependencies]
tonic = { workspace = true }
tonic-reflection = { workspace = true, optional = true }
prost = { workspace = true }
prost-types = { workspace = true }

serde = { workspace = true }

mongodb = { workspace = true, optional = true }

eyre = { workspace = true }

futures = { workspace = true }

config = { workspace = true, optional = true }

lazy_static = { version = "1.4.0", optional = true }

[build-dependencies]
tonic-build = { version = "0.9.1" , features = ["prost"] }
