[package]
name = "federation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-reflection = { workspace = true}
tonic = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

entity = { path = "../entity" }

eyre = { workspace = true }
petgraph = { version = "0.6.3" }
# sled = "0.34.7" Maybe later we will cache the graph in a database
